# python-usb-protocol

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  hatch.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  workflow.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: descriptor_builder.py  simple_descriptors.py
usb-protocol/types/: __init__.py  descriptor.py
usb-protocol/types/descriptors/: standard.py
usb_protocol/contextmgrs/: manager.py
usb_protocol/contextmgrs/descriptors/: microsoft.py
usb_protocol/emitters/: __init__.py  construct.py  construct_interop.py  descriptor.py
usb_protocol/emitters/descriptors/: cdc.py  hid.py  microsoft.py  microsoft10.py  midi1.py  standard.py  uac.py  uac1.py  uac2.py  uac3.py
usb_protocol/types/: __init__.py  descriptor.py
usb_protocol/types/descriptors/: __init__.py  cdc.py  hid.py  microsoft.py  microsoft10.py  midi1.py  midi2.py  standard.py  test_uac2.py  uac.py  uac1.py  uac2.py  uac3.py
usb_protocol/types/descriptors/partial/: standard.py
usb_protocol/types/superspeed/: __init__.py
