[metadata]
name = usb_protocol
version = attr: setuptools_scm.get_version
description = utilities, data structures, constants, parsers, and tools for working with USB data
url = https://github.com/greatscottgadgets/python-usb-protocol
author = Katherine J. Temkin
author_email = ktemkin@greatscottgadgets.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_expression = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Plugins
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Security

[options]
python_requires = >=3.7

install_requires =
    construct
    importlib-metadata; python_version < '3.8'

# nothing special required for auto-discovery / flat layout
[options.extras_require]
# deps are included below mainly for local/venv installs using pip
# otherwise deps may be handled via tox, ci config files or pkg managers
doc =
    sphinx==7.2.6
    sphinx_rtd_theme==2.0.0
    sphinxcontrib-apidoc
    readthedocs-sphinx-search==0.3.2
    jinja2==3.1.3
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[bdist_wheel]
universal = 1

[check]
metadata = true
strict = false

[check-manifest]
ignore =
    .editorconfig
    .gitattributes
    .gitignore

[flake8]
exclude =
    .git,
    __pycache__,
    examples,
    build,
    dist

max-line-length = 250
max-complexity = 10
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    # line break before binary operator
    W503,
    # imported but unused
    F401,
    # star import used; unable to detect undefined names
    F403,
    # may be undefined, or defined from star imports
    F405,
    # too many leading '#' for block comment
    E266,
    # whitespace before ':'
    E203,
    # multiple spaces before operator
    E221,
    # multiple spaces after operator
    E222,
    # multiple spaces after ','
    E241,
    # at least two spaces before inline comment
    E261,
    # multiple spaces after keyword
    E271,
    # multiple spaces before keyword
    E272,
    # too many blank lines
    E303,
    # expected 2 blank lines, found 1
    E302,
    # expected 2 blank lines after class or function definition
    E305,
    # do not assign a lambda expression, use a def
    E731,
    # allow over/under indenting for now
    E126,
    E121,
